# research-v1

./: .gitignore  pyproject.toml
.agents/skills/paper-lab-presentation/: SKILL.md
.agents/skills/paper-lab-presentation/references/: presentation_guide.md  quarto_slides.md
manuscript/: README.md
presentation/: LLaDA.qmd  README.md  _common-format.yml
presentation/LLaDA/: LLaDA.qmd  _quarto.yml
presentation/_templates/: pptx-reference-small.pptx
presentation/decks/LDM_report/: LDM_report.qmd  _quarto.yml
presentation/decks/LLaDA/: LLaDA_ja.pptx  LLaDA_ja.qmd  _quarto.yml
presentation/scripts/: build-pptx-reference.py
presentation/shared/style/: _common-format.yml  _pptx-reference.yml
presentation/templates/pptx/: plain_template.pptx  ritsumeikan.pptx  template.pptx
src/GAN/src/: main.py
src/LDM/: LDM_report.html  LDM_report.qmd  _quarto.yml  ddpm_colab_production.ipynb
src/attention_is_all_you_need/: distilbert.ipynb
src/pytorch/basicguide/: quickstart.py  tensors.py
src/sensing_eng/: sensing2025.ipynb  sensing2025.py
